# yaml-resume-cli

./: README.md  pyproject.toml
examples/: README.md
examples/robotics/: job_description.txt  original.resume.yaml  resume.md  resume.tex  resume.yaml
examples/woodworking/: job_description.txt  original.resume.yaml  resume.tex  resume.yaml
yaml_resume_cli/: __init__.py  cli.py  generate.py  render.py  resume.yaml
yaml_resume_cli/templates/robotics/: resume.md.j2  resume.tex.j2
